--- a/akkoma/custom.css
+++ b/akkoma/custom.css
@@ -1,4 +1,5 @@
 /* Note that if you are an admin injecting this into your instance's static directory custom.css, only logged-in users will be able to see the changes. */
+/* Upload the yuh.png and nuh.png to any accessible image hosting of your choice (your instance media, for example) and replace the dummy URLs with proper links to image*/
 
 /* hide default Favorite SVG */
 :root {
@@ -8,7 +9,7 @@
 /* Favorite button (before interaction) is a Yeah! button */
 
 .FavoriteButton>button{
-background-image:url('https://media.nede.re/media/2659b96691eca4545072d586eeaed491f93b65f3b73cd69b88f43fe473ed4bfd.png');
+background-image:url('yuh.png');
 background-size: 51px;
 
 }
@@ -32,7 +33,7 @@ background-size: 51px;
 /* Favorite button (after interaction) is a Nah... button */
 
 .button-unstyled.interactive.-favorited{
-background-image:url('https://media.nede.re/media/177b494ee500daff8e8399905921af9319865757b757bf54168f7dd4dcdec59b.png');
+background-image:url('nuh.png');
 background-size: 51px;
 
 }
@@ -40,6 +41,6 @@ background-size: 51px;
 /* Change favorite icon in notification feed ("X liked your post) to a Yeah! button */
 
 .svg-inline--fa.fa-star.type-icon{
-   background-image: url(https://media.nede.re/media/2b9a207ce7503a526ee2a96cf6b728c9575228da6a55a3bbdb763e691a5100d6.png);
+   background-image: url('yuh.png');
   background-size: 15px;
 }
